# grazer

./: .gitignore  Dockerfile  Dockerfile.cluster  Dockerfile.dev  Dockerfile.remote  NOTES.md  README.md  boot_config.yaml  docker-compose.yml  main.py  omni_boot.py  omni_env.yaml  py311-linux-requirements.txt  pyproject.toml  register_actors.py  requirements2.txt  requirements3.txt  run_kube_worker.py  run_ray_cache.py  run_ray_cpu_worker.py  run_ray_gpu_worker.py  run_ray_network_worker.py  run_runpod_worker.py  run_streamer.py  start_cluster_workers.py  startup_ray.sh  streamer_env.yaml  test.sh  toucher.sh
.github/workflows/: build.yaml  build_distributions.yaml  build_grazer.yaml  build_simple.yaml
app/: algorithm_asset_cacher.py  data_types.py  egress.py  helpers.py  jetstream.py  logic_evaluator.py  redis.py  sentry.py  settings.py  sqs_consumer.py  stream_data.py  telemetry.py  timings.py
app/algos/: base.py  manager.py
app/algos/operators/: attribute.py  combo.py  emotion_sentiment.py  entity.py  financial_sentiment.py  huggingface_classifier.py  image_arbitrary.py  image_nsfw.py  language.py  logic.py  moderation.py  regex.py  sentiment.py  social.py  text_arbitrary.py  topic.py  toxicity.py  transformer.py
app/cluster/: actor_registry.py
app/kube/: base.py  processor.py  router.py
app/models/: huggingface_classifier.py  image_arbitrary_classifier.py  image_nsfw_classifier.py  ml_model.py  text_arbitrary_classifier.py  text_embedder.py
app/omni/: boot.py  boot_settings.py  profiler.py
app/ray/: cache.py  cpu_worker.py  dispatcher.py  gpu_worker.py  network_worker.py  semaphore.py  timing_base.py  utils.py
app/runpod/: auditor.py  backfiller.py  backtester.py  base.py  processor.py  router.py
app/utils/profilers/: adapters.py  cpu_profiler.py  timing_functions.py
deploy/: README.md  Tiltfile
deploy/chart/grazer/: Chart.yaml  values.yaml
deploy/chart/grazer/templates/: ray-clusters.yaml
docs/: DEVELOPMENT.md
tests/: conftest.py
tests/app/: test_algorithm_asset_cacher.py  test_egress.py  test_helpers.py  test_jetstream.py  test_logger.py  test_logic_evaluator.py
tests/app/algos/: test_base.py
tests/app/algos/operators/: test_attribute.py  test_entity.py  test_regex.py  test_social.py
tests/app/ray/: test_cache.py  test_cpu_worker.py  test_dispatcher.py  test_network_worker.py
